fix: topology quick search add alignment

--- a/frontend/packages/topology/src/filters/TopologyFilterBar.scss
+++ b/frontend/packages/topology/src/filters/TopologyFilterBar.scss
@@ -17,3 +17,8 @@
     margin-right: var(--pf-t--global--spacer--lg);
   }
 }
+
+.odc-topology-quick-search-toolbar-item {
+  height: 100%;
+  align-items: center;
+}
